[package]
name = "anal"
version = "0.1.0"
authors = ["Stan Drozd <drozdziak1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jack = "0.6.2"
gtk = "0.7.0"
gdk = "0.11.0"
cairo-rs = "0.7.1"
gio = "0.7.0"
log = "0.4.8"
env_logger = "0.7.0"
failure = "0.1.6"
lazy_static = "1.4.0"
crossbeam = "0.7.2"
decibel = "0.1.2"
